putting index.html in root

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tis Elevator</title>
-    <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/output.css">
-    <link rel="stylesheet" href="font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="swiper.css">
+    <link rel="shortcut icon" href="src/imgs/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/output.css">
+    <link rel="stylesheet" href="src/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="src/swiper.css">
 
 
 </head>
@@ -127,22 +127,22 @@
                         coverflow-effect-stretch="0" coverflow-effect-depth="100" coverflow-effect-modifier="1"
                         coverflow-effect-slide-shadows="true">
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/Tis_Asanbar_Logo-01.svg" class="block w-full" />
+                            <img src="src/imgs/Tis_Asanbar_Logo-01.svg" class="block w-full" />
                         </swiper-slide>
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/IMG_6486.webp" class="block w-full" />
+                            <img src="src/imgs/IMG_6486.webp" class="block w-full" />
                         </swiper-slide>
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/IMG_6462.webp" class="block w-full" />
+                            <img src="src/imgs/IMG_6462.webp" class="block w-full" />
                         </swiper-slide>
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/IMG_4362.webp" class="block w-full" />
+                            <img src="src/imgs/IMG_4362.webp" class="block w-full" />
                         </swiper-slide>
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/IMG_6873.webp" class="block w-full" />
+                            <img src="src/imgs/IMG_6873.webp" class="block w-full" />
                         </swiper-slide>
                         <swiper-slide class="bg-cover bg-center w-[400px] h-[400px]">
-                            <img src="imgs/IMG_6616.webp" class="block w-full" />
+                            <img src="src/imgs/IMG_6616.webp" class="block w-full" />
                         </swiper-slide>
                     </swiper-container>
             </section>
@@ -159,7 +159,7 @@
                     <div
                         class="w-4/5 lg:w-1/3 md:h-[95%] h-1/2 p-10 rounded-lg shadow-xl flex items-center justify-center flex-col my-8">
                         <figure class="flex items-center justify-between flex-col w-[250px] h-[300px] ">
-                            <img src="imgs/h_pro.webp"
+                            <img src="src/imgs/h_pro.webp"
                                 class="h-[210px] w-[210px] object-top overflow-hidden object-cover rounded-[50%]"
                                 alt="">
                             <figcaption class="capitalize text-[#C23210] text-2xl font-tis2">Hadi Aharipoor</figcaption>
@@ -242,8 +242,8 @@
                     <figure class="lg:w-1/3 md:w-1/2 w-full flex items-center justify-center">
                         <div
                             class="flex items-center justify-start flex-col rounded-xl overflow-hidden w-[56%] bg-[#c2311026]">
-                            <a href="_p_one.html" target="_blank  ">
-                                <img src="imgs/mahabad.webp" alt="" class="w-full h-full object-cover">
+                            <a href="src/_p_one.html" target="_blank  ">
+                                <img src="src/imgs/mahabad.webp" alt="" class="w-full h-full object-cover">
                             </a>
                             <figcaption class="p-2">
                                 <h3 class="font-medium text-center text-xl uppercase text-white font-tis2">6 story
@@ -261,8 +261,8 @@
                     <figure class="p-5 hidden md:flex md:w-1/2 lg:w-1/3 items-center justify-center">
                         <div
                             class="flex items-center justify-start flex-col rounded-xl overflow-hidden w-[86%] bg-[#c2311063]">
-                            <a href="_p_two.html" target="_blank">
-                                <img src="imgs/IMG_4949.webp" alt="" class="w-full h-full object-cover">
+                            <a href="src/_p_two.html" target="_blank">
+                                <img src="src/imgs/IMG_4949.webp" alt="" class="w-full h-full object-cover">
                             </a>
                             <figcaption class="p-2">
                                 <h3 class="font-medium text-center text-xl uppercase text-white font-tis2">4 story
@@ -276,8 +276,8 @@
                     <figure class="lg:w-1/3 md:w-1/2 w-full flex items-center justify-center">
                         <div
                             class="flex items-center justify-start flex-col rounded-xl overflow-hidden w-[56%] bg-[#c2311026]">
-                            <a href="_P_three.html" target="_blank">
-                                <img src="imgs/IMG_6617.webp" alt="" class="w-full h-full object-cover">
+                            <a href="src/_P_three.html" target="_blank">
+                                <img src="src/imgs/IMG_6617.webp" alt="" class="w-full h-full object-cover">
                             </a>
                             <figcaption class="p-2">
                                 <h3 class="font-medium text-center text-xl uppercase text-white font-tis2">9 story
@@ -293,7 +293,7 @@
                         </div>
                     </figure>
                 </div>
-                <a href="projects.html" class="z-10 ">
+                <a href="src/projects.html" class="z-10 ">
                     <span
                         class="w-[170px] h-[40px] border border-white flex items-center justify-center rounded-3xl cursor-pointer my-4">
                         <p
@@ -320,7 +320,7 @@
                 <div class="relative flex flex-wrap items-center justify-center w-full h-full">
                     <figure class="w-full flex items-center justify-center ">
                         <img class="md:w-1/5 sm:w-1/3 w-1/2 h-1/2 sm:h-1/3 md:h-1/5 object-cover"
-                            src="imgs/Tis_Asanbar_Logo-01.svg" alt="">
+                            src="src/imgs/Tis_Asanbar_Logo-01.svg" alt="">
                     </figure>
                     <p class="w-full text-[#0E435B]  flex items-center justify-center p-2 font-light capitalize">iran -
                         tabriz</p>
@@ -346,7 +346,7 @@
                             class="bi bi-x-diamond-fill hover:rotate-180 duration-300"></i></span>
                     <figure class="sm:w-[45%] w-[60%] h-1/3">
                         <a href="https://www.instagram.com/tiselevator/" target="_blank">
-                            <img src="imgs/IMG_7114.PNG" alt="">
+                            <img src="src/imgs/IMG_7114.PNG" alt="">
                         </a>
                     </figure>
                 </article>
@@ -356,9 +356,9 @@
         </div>
     </main>
 </body>
-<script src="javascript/master.js"></script>
-<script src="swiper.js"></script>
-<script src="javascript/swipper.js"></script>
+<script src="src/javascript/master.js"></script>
+<script src="src/swiper.js"></script>
+<script src="src/javascript/swipper.js"></script>
 
 <script>
     var swiper = new Swiper(".mySwiper", {
