changes to project.html to resolve problem

--- a/src/projects.html
+++ b/src/projects.html
@@ -27,7 +27,7 @@
                     </figure>
                     <nav class="w-2/3 hidden md:flex relative z-10  ps-20 ">
                         <ul class="list-none flex items-center justify-evenly w-full">
-                            <a href="index.html">
+                            <a href="../index.html">
                                 <li
                                     class="group text-white  p-2 capitalize text-[1.2vw] cursor-pointer relative hover:text-[#C23210] duration-300">
                                     home
@@ -36,7 +36,7 @@
                                     </div>
                                 </li>
                             </a>
-                            <a href="index.html#about_us">
+                            <a href="../index.html#about_us">
                                 <li
                                     class="group text-white p-2 capitalize text-[1.2vw] cursor-pointer relative hover:text-[#C23210] duration-300">
                                     about us
@@ -68,13 +68,13 @@
                     </div>
                     <ul id="navigation"
                         class="absolute w-full top-[100%] bg-[#d69485f3] flex flex-col items-center justify-evenly h-[200px] z-20 md:hidden translate-x-[120%] duration-500">
-                        <a href="index.html" class="w-full h-1/4 flex items-center justify-center">
+                        <a href="../index.html" class="w-full h-1/4 flex items-center justify-center">
                             <li
                                 class="w-full h-full flex items-center ps-7 capitalize text-white text-lg font-medium duration-300 hover:text-[#C23210] hover:bg-[#c2311038] cursor-pointer">
                                 home
                             </li>
                         </a>
-                        <a href="index.html#about_us" class="w-full h-1/4 flex items-center justify-center">
+                        <a href="../index.html#about_us" class="w-full h-1/4 flex items-center justify-center">
                             <li
                                 class="w-full h-full flex items-center ps-7 capitalize text-white text-lg font-medium duration-300 hover:text-[#C23210] hover:bg-[#c2311038] cursor-pointer">
                                 about
